# docs/swagger.json
@@ -716,7 +716,7 @@
                 "tags": [
                     "dashboards"
                 ],
-                "summary": "Get dashboards by user",
+                "summary": "Get user`s dashboards",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -748,12 +748,15 @@
                 }
             }
         },
-        "/dashboards/addAccess": {
+        "/dashboards/admin/addAccess": {
             "post": {
                 "security": [
                     {
                         "JWT": []
                     }
+                ],
+                "consumes": [
+                    "application/json"
                 ],
                 "tags": [
                     "dashboards"
@@ -795,8 +798,53 @@
                 }
             }
         },
-        "/dashboards/create": {
-            "patch": {
+        "/dashboards/admin/custom-field/{fieldId}": {
+            "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "tags": [
+                    "dashboards"
+                ],
+                "summary": "Delete custom field",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "fieldId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/dashboards/admin/removeAccess/{dashboardId}/{userId}": {
+            "delete": {
                 "security": [
                     {
                         "JWT": []
@@ -811,23 +859,28 @@
                 "tags": [
                     "dashboards"
                 ],
-                "summary": "Create dashboard",
+                "summary": "Remove access",
                 "parameters": [
                     {
+                        "type": "string",
                         "description": " ",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.CreateOnePayload"
-                        }
+                        "name": "dashboardId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": " ",
+                        "name": "userId",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Dashboard"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -851,7 +904,7 @@
                 }
             }
         },
-        "/dashboards/updateAccess": {
+        "/dashboards/admin/updateAccess": {
             "patch": {
                 "security": [
                     {
@@ -892,47 +945,7 @@
                 }
             }
         },
-        "/dashboards/{dashboardId}": {
-            "get": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "dashboards"
-                ],
-                "summary": "Get dashboard",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Dashboard"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/httpext.CommonError"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/httpext.CommonError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httpext.CommonError"
-                        }
-                    }
-                }
-            },
+        "/dashboards/admin/{dashboardId}": {
             "delete": {
                 "security": [
                     {
@@ -1032,58 +1045,7 @@
                 }
             }
         },
-        "/dashboards/{dashboardId}/custom-field": {
-            "post": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "dashboards"
-                ],
-                "summary": "Create custom field",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": " ",
-                        "name": "dashboardId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "description": " ",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.AddCustomField"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Field"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/httpext.CommonError"
-                        }
-                    }
-                }
-            }
-        },
-        "/dashboards/{dashboardId}/settings": {
+        "/dashboards/admin/{dashboardId}/settings": {
             "patch": {
                 "security": [
                     {
@@ -1146,7 +1108,7 @@
                 }
             }
         },
-        "/dashboards/{dashboardId}/webhook": {
+        "/dashboards/admin/{dashboardId}/webhook": {
             "patch": {
                 "security": [
                     {
@@ -1203,8 +1165,8 @@
                 }
             }
         },
-        "/dashboards/{dashboardId}/{userId}": {
-            "delete": {
+        "/dashboards/create": {
+            "patch": {
                 "security": [
                     {
                         "JWT": []
@@ -1219,7 +1181,105 @@
                 "tags": [
                     "dashboards"
                 ],
-                "summary": "Remove access",
+                "summary": "Create dashboard",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.CreateOnePayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Dashboard"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/dashboards/{dashboardId}": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dashboards"
+                ],
+                "summary": "Get dashboard",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Dashboard"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpext.CommonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/dashboards/{dashboardId}/custom-field": {
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dashboards"
+                ],
+                "summary": "Create custom field",
                 "parameters": [
                     {
                         "type": "string",
@@ -1229,18 +1289,20 @@
                         "required": true
                     },
                     {
-                        "type": "string",
                         "description": " ",
-                        "name": "userId",
-                        "in": "query",
-                        "required": true
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.AddCustomField"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Field"
                         }
                     },
                     "400": {
@@ -1646,10 +1708,25 @@
         "api.CreateOnePayload": {
             "type": "object",
             "properties": {
+                "card_id": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
                 "dashboard_id": {
                     "type": "string"
                 },
+                "fields": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
                 "name": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 }
             }
@@ -1974,6 +2051,12 @@
             "properties": {
                 "author_id": {
                     "type": "string"
+                },
+                "fields": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Field"
+                    }
                 },
                 "id": {
                     "type": "string"
